overflow issue

--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -386,6 +386,7 @@ fieldset {
   overflow-y: auto;
   color: black !important;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.18);
+  overflow-x: hidden;
 }
 
 input[name="username"] {
